Document PPDG/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Dual_Nationality_County_Of_Issue__c</fullName>
        <label>Dual Nationality County Of Issue</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dual_Nationality_Held__c</fullName>
        <label>Dual Nationality Held</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dual_Nationality_passport_date_of_issue__c</fullName>
        <label>Dual Nationality passport date of issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dual_Nationality_passport_expiry_date__c</fullName>
        <label>Dual Nationality passport expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBS_Customer_Status__c</fullName>
        <label>EBS Customer Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <externalId>true</externalId>
        <label>EBS ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Address_House_No__c</fullName>
        <label>Employer Address House No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address_Line_1__c</fullName>
        <label>Employer Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address_Line_2__c</fullName>
        <label>Employer Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address_Line_3__c</fullName>
        <label>Employer Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_City__c</fullName>
        <label>Employer City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Country_2__c</fullName>
        <label>Employer Country 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Country__c</fullName>
        <label>Employer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name_2__c</fullName>
        <label>Employer Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Post_Code_2__c</fullName>
        <label>Employer Post Code 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Post_Code__c</fullName>
        <label>Employer Post Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_s_Phone2__c</fullName>
        <label>Employers&apos; Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_s_Phone__c</fullName>
        <label>Employer&apos;s Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Address_Line_1__c</fullName>
        <label>Employers Address Line 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Address_Line_2__c</fullName>
        <label>Employers Address Line 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Address_Line_3__c</fullName>
        <label>Employers Address Line 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Country__c</fullName>
        <label>Employers Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Email_Address__c</fullName>
        <label>Employers Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employers_Name__c</fullName>
        <label>Employers Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employers_Post_Code__c</fullName>
        <label>Employers Post Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment status</label>
        <picklist>
            <controllingField>Employment_Type__c</controllingField>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management/Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unskilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-skilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior (J)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management/Professional (M)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unskilled (N)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor (O)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-skilled (P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skilled (S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior management (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed (U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (X)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not given (Z)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skilled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Type_2__c</fullName>
        <label>Employment Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-employed professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-employed non professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed (E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self employed professional (P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self employed non-professional (N)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife (H)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part time (L)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired (R)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student (S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary employment (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed (U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (X)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Given (Z)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment type</label>
        <picklist>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed non-professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_status_2__c</fullName>
        <label>Employment status 2</label>
        <picklist>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management/Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unskilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-skilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior (J)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management/Professional (M)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unskilled (N)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor (O)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-skilled (P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skilled (S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior management (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed (U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (X)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not given (Z)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skilled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Monthly_Num_of_Transactions_Inward__c</fullName>
        <label>Est. Monthly Num. of Transactions Inward</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Monthly_Num_of_Transactions_Outward__c</fullName>
        <label>Est. Mnthly Num. of Transactions Outward</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Cash_Deposit_frequency__c</fullName>
        <label>Estimated Cash Deposit frequency</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 5 weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 10 weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 19 weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 50 weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+ weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Cash_Withdrawal_Frequency__c</fullName>
        <label>Estimated Cash Withdrawal Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 5 weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 10 weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 19 weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 50 weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+ weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Volume_Inward__c</fullName>
        <label>Estimated Monthly Volume Inward</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - 10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,001 - 20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20,001 - 40,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40,001 - 70,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70,001 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Volume_Outward__c</fullName>
        <label>Estimated Monthly Volume Outward</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - 10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,001 - 20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20,001 - 40,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40,001 - 70,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70,001 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_running_costs__c</fullName>
        <description>NPAA</description>
        <label>Estimated running costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_value_of_property__c</fullName>
        <label>Estimated value of property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ever_been_in_arrears_with_any_loans__c</fullName>
        <inlineHelpText>Includes mortgages &amp; rent</inlineHelpText>
        <label>Ever been in arrears with any loans</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ever_missed_financial_commitment__c</fullName>
        <inlineHelpText>Have you ever been behind with a financial commitment or had a house repossessed</inlineHelpText>
        <label>Ever missed financial commitment</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Business_Bank_Account_Number__c</fullName>
        <label>Existing Business Bank Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Business_Bank_Name__c</fullName>
        <description>NPAA build</description>
        <label>Existing Business Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Business_Bank_Sort_Code__c</fullName>
        <label>Existing Business Bank Sort Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Customer__c</fullName>
        <formula>IF(ISBLANK(EBS_ID__c),&quot;N&quot;, &quot;Y&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Reference_Number__c</fullName>
        <label>Experian Reference Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Age_range__c</fullName>
        <label>External Prospect Age range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Data_Expiry_date__c</fullName>
        <label>External Prospect Data Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Data_Hire_date__c</fullName>
        <label>External Prospect Data Hire date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Income_range__c</fullName>
        <label>External Prospect Income range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Unique_ID__c</fullName>
        <label>External Prospect Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_use_with_HPP_CAA_eligibility__c</fullName>
        <label>For use with HPP CAA eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_overseas_trans_per_annum__c</fullName>
        <description>For use with NPAA</description>
        <label>Frequency of overseas trans per annum</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>text(Salutation)+&quot; &quot;+ FirstName+ IF( Middle_Name__pc == null || Middle_Name__pc ==&apos;&apos;,&apos;&apos;,&apos; &apos; + Middle_Name__pc ) + &quot; &quot; +  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male (M)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female (F)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income_2__c</fullName>
        <label>Gross Annual Income 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income_3__c</fullName>
        <label>Gross_Annual_Income_3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Gross Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Commission2__c</fullName>
        <label>Guaranteed Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Commission__c</fullName>
        <label>Guaranteed Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Overtime2__c</fullName>
        <label>Guaranteed Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Overtime__c</fullName>
        <label>Guaranteed Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Shift_Allowance2__c</fullName>
        <label>Guaranteed Shift Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Shift_Allowance__c</fullName>
        <label>Guaranteed Shift Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_bonus_2__c</fullName>
        <label>Guaranteed bonus 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_bonus__c</fullName>
        <label>Guaranteed bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPPP_Asset_exposure__c</fullName>
        <description>This field is required to capture aggregated balance of all existing HPPP&apos;s the customer has.</description>
        <label>HPPP Asset exposure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Happy_for_IBB_to_hold_your_data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please confirm you are happy for IBB to hold the information on you</inlineHelpText>
        <label>Happy for us to hold your data.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Second_Employment__c</fullName>
        <label>Has Second Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_any_arrear_s_worsened_in_last_6mth__c</fullName>
        <label>Have any arrear(s) worsened in last 6mth</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_any_County_Court_Judgements__c</fullName>
        <label>Have you any County Court Judgements?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_been_made_bankrupt_or_have_CCJs__c</fullName>
        <label>Have you been made bankrupt or have CCJs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_declared_bankrupt__c</fullName>
        <label>Have you ever been declared bankrupt?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_made_bankrupt__c</fullName>
        <inlineHelpText>Have you ever been made bankrupt?</inlineHelpText>
        <label>Have you ever been made bankrupt?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_refused_finance_v1__c</fullName>
        <label>Have you ever been refused finance?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_a_CCJ__c</fullName>
        <inlineHelpText>Have you ever had a county court judgement made against you?</inlineHelpText>
        <label>Have you ever had a CCJ made against u?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_had_a_debt_relief__c</fullName>
        <label>Have you had a debt relief ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_had_any_IVA__c</fullName>
        <label>Have you had any IVA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_previously_had_a_mortgage__c</fullName>
        <label>Have you previously had a mortgage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Details_Estimated_Value__c</fullName>
        <description>Home details: Property owned-estimated value</description>
        <label>Home Details: Estimated Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Details_Mortgage_Outstanding__c</fullName>
        <label>Home Details: Mortgage Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Details_Name_of_Lender__c</fullName>
        <label>Home Details: Name of Lender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>